# sound_app

./: pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sound_app/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_sound_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_sound_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
